Register feed; Register attribute; File transfer; Firmware install