@@ -24,18 +24,16 @@ import com.wolkabout.wolk.filemanagement.model.device2platform.FileStatus;
 import com.wolkabout.wolk.filemanagement.model.device2platform.UrlStatus;
 import com.wolkabout.wolk.filemanagement.model.platform2device.*;
 import com.wolkabout.wolk.util.JsonUtil;
-import org.apache.commons.codec.binary.Base64;
 import org.eclipse.paho.client.mqttv3.MqttClient;
 import org.eclipse.paho.client.mqttv3.MqttException;
 import org.eclipse.paho.client.mqttv3.MqttMessage;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import javax.xml.bind.DatatypeConverter;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -44,25 +42,26 @@ public class FileManagementProtocol {
 
     protected static final Logger LOG = LoggerFactory.getLogger(FileManagementProtocol.class);
     protected static final int QOS = 2;
+
+    protected static final String OUT_DIRECTION = "d2p/";
+    protected static final String IN_DIRECTION = "p2d/";
+
     // File upload initiation and input/output topics
-    protected static final String FILE_UPLOAD_INITIATE = "p2d/file_upload_initiate/d/";
-    protected static final String FILE_UPLOAD_STATUS = "d2p/file_upload_status/d/";
-    protected static final String FILE_UPLOAD_ABORT = "p2d/file_upload_abort/d/";
+    protected static final String FILE_UPLOAD_INITIATE = "/file_upload_initiate";
+    protected static final String FILE_UPLOAD_STATUS = "/file_upload_status";
+    protected static final String FILE_UPLOAD_ABORT = "/file_upload_abort";
     // File upload chunk topics
-    protected static final String FILE_BINARY_REQUEST = "d2p/file_binary_request/d/";
-    protected static final String FILE_BINARY_RESPONSE = "p2d/file_binary_response/d/";
+    protected static final String FILE_BINARY_REQUEST = "/file_binary_request";
+    protected static final String FILE_BINARY_RESPONSE = "/file_binary_response";
     // File URL download initiation and input/output topics
-    protected static final String FILE_URL_DOWNLOAD_INITIATE = "p2d/file_url_download_initiate/d/";
-    protected static final String FILE_URL_DOWNLOAD_STATUS = "d2p/file_url_download_status/d/";
-    protected static final String FILE_URL_DOWNLOAD_ABORT = "p2d/file_url_download_abort/d/";
+    protected static final String FILE_URL_DOWNLOAD_INITIATE = "/file_url_download_initiate";
+    protected static final String FILE_URL_DOWNLOAD_STATUS = "/file_url_download_status";
+    protected static final String FILE_URL_DOWNLOAD_ABORT = "/file_url_download_abort";
     // File removal topics
-    protected static final String FILE_DELETE = "p2d/file_delete/d/";
-    protected static final String FILE_PURGE = "p2d/file_purge/d/";
+    protected static final String FILE_DELETE = "/file_delete";
+    protected static final String FILE_PURGE = "/file_purge";
     // File list input/output topics
-    protected static final String FILE_LIST_REQUEST = "p2d/file_list_request/d/";
-    protected static final String FILE_LIST_RESPONSE = "d2p/file_list_response/d/";
-    protected static final String FILE_LIST_UPDATE = "d2p/file_list_update/d/";
-    protected static final String FILE_LIST_CONFIRM = "p2d/file_list_confirm/d/";
+    protected static final String FILE_LIST = "/file_list";
     // The MQTT client
     protected final MqttClient client;
     // The Executor
@@ -119,50 +118,39 @@ public class FileManagementProtocol {
     }
 
     /**
-     * This is the method that is used to capture the file list and send it.
-     */
-    public void publishFileList() {
-        LOG.debug("Publishing file list to the platform.");
-        publishFileList(FILE_LIST_UPDATE + client.getClientId());
-    }
-
-    /**
      * This is the main method that uses the passed MqttClient to subscribe to all the topics
      * that need to be subscribed to by the protocol.
      */
     public void subscribe() {
         try {
             // File transfer subscriptions
-            LOG.debug("Subscribing to topic '" + FILE_UPLOAD_INITIATE + client.getClientId() + "'.");
-            client.subscribe(FILE_UPLOAD_INITIATE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_UPLOAD_INITIATE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_UPLOAD_INITIATE, QOS,
                     (topic, message) -> executor.execute(() -> handleFileTransferInitiation(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_UPLOAD_ABORT + client.getClientId() + "'.");
-            client.subscribe(FILE_UPLOAD_ABORT + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_UPLOAD_ABORT + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_UPLOAD_ABORT, QOS,
                     (topic, message) -> executor.execute(() -> handleFileTransferAbort(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_BINARY_RESPONSE + client.getClientId() + "'.");
-            client.subscribe(FILE_BINARY_RESPONSE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_BINARY_RESPONSE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_BINARY_RESPONSE, QOS,
                     (topic, message) -> executor.execute(() -> handleFileTransferBinaryResponse(topic, message)));
             // File URL download subscriptions
-            LOG.debug("Subscribing to topic '" + FILE_URL_DOWNLOAD_INITIATE + client.getClientId() + "'.");
-            client.subscribe(FILE_URL_DOWNLOAD_INITIATE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_INITIATE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_INITIATE, QOS,
                     (topic, message) -> executor.execute(() -> handleUrlDownloadInitiation(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_URL_DOWNLOAD_ABORT + client.getClientId() + "'.");
-            client.subscribe(FILE_URL_DOWNLOAD_ABORT + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_ABORT + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_ABORT, QOS,
                     (topic, message) -> executor.execute(() -> handleUrlDownloadAbort(topic, message)));
             // File deletion subscriptions
-            LOG.debug("Subscribing to topic '" + FILE_DELETE + client.getClientId() + "'.");
-            client.subscribe(FILE_DELETE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_DELETE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_DELETE, QOS,
                     (topic, message) -> executor.execute(() -> handleFileDeletion(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_PURGE + client.getClientId() + "'.");
-            client.subscribe(FILE_PURGE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_PURGE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_PURGE, QOS,
                     (topic, message) -> executor.execute(() -> handleFilePurge(topic, message)));
             // File list subscriptions
-            LOG.debug("Subscribing to topic '" + FILE_LIST_REQUEST + client.getClientId() + "'.");
-            client.subscribe(FILE_LIST_REQUEST + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_LIST + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_LIST, QOS,
                     (topic, message) -> executor.execute(() -> handleFileListRequest(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_LIST_CONFIRM + client.getClientId() + "'.");
-            client.subscribe(FILE_LIST_CONFIRM + client.getClientId(), QOS,
-                    (topic, message) -> executor.execute(() -> logReceivedMqttMessage(topic, message)));
         } catch (MqttException exception) {
             LOG.error(exception.getMessage());
         }
@@ -216,8 +204,8 @@ public class FileManagementProtocol {
         // Start the session
         fileDownloadSession = new FileDownloadSession(initMessage, new FileDownloadSession.Callback() {
             @Override
-            public void sendRequest(String fileName, int chunkIndex, int chunkSize) {
-                handleFileTransferRequest(fileName, chunkIndex, chunkSize);
+            public void sendRequest(String fileName, int chunkIndex) {
+                handleFileTransferRequest(fileName, chunkIndex);
             }
 
             @Override
@@ -238,7 +226,8 @@ public class FileManagementProtocol {
             LOG.info("File '" + file.getName() + "' already exists.");
             byte[] fileBytes = Files.readAllBytes(file.toPath());
             byte[] existingFileHash = FileDownloadSession.calculateHashForBytes(fileBytes);
-            return Arrays.equals(existingFileHash, Base64.decodeBase64(fileHash));
+
+            return fileHash.equals(DatatypeConverter.printHexBinary(existingFileHash).toUpperCase());
         }
         return null;
     }
@@ -275,9 +264,9 @@ public class FileManagementProtocol {
         fileDownloadSession.receiveBytes(message.getPayload());
     }
 
-    void handleFileTransferRequest(String fileName, int chunkIndex, int chunkSize) {
+    void handleFileTransferRequest(String fileName, int chunkIndex) {
         // Create a message to request the data and send it
-        ChunkRequest chunkRequest = new ChunkRequest(fileName, chunkIndex, chunkSize);
+        ChunkRequest chunkRequest = new ChunkRequest(fileName, chunkIndex);
         publish(FILE_BINARY_REQUEST + client.getClientId(), chunkRequest);
     }
 
@@ -413,10 +402,9 @@ public class FileManagementProtocol {
             management.createFile(session.getFileData(), session.getFileName());
 
             // Announce the status for good status, and save the data from file, and publish the file list now.
-            UrlStatus statusMessage = new UrlStatus(session.getInitMessage().getFileUrl(), FileTransferStatus.FILE_READY,
-                    session.getFileName());
+            UrlStatus statusMessage = new UrlStatus(session.getInitMessage().getFileUrl(), FileTransferStatus.FILE_READY);
             publish(FILE_URL_DOWNLOAD_STATUS + client.getClientId(), statusMessage);
-            LOG.info("Reporting URL file download as successful. Downloaded file '" + statusMessage.getFileName() + "'.");
+            LOG.info("Reporting URL file download as successful. Downloaded file '" + session.getFileName() + "'.");
         } catch (IOException exception) {
             // Announce a file system error has occurred
             publish(FILE_URL_DOWNLOAD_STATUS + client.getClientId(),
@@ -443,6 +431,7 @@ public class FileManagementProtocol {
         FileDelete fileDelete = JsonUtil.deserialize(message, FileDelete.class);
         LOG.info("Received request to delete file '" + fileDelete.getFileName() + "'. Deleting...");
         management.deleteFile(fileDelete.getFileName());
+
         publishFileList();
     }
 
@@ -459,6 +448,7 @@ public class FileManagementProtocol {
 
         LOG.info("Received request to purge file list. Purging...");
         management.purgeDirectory();
+
         publishFileList();
     }
 
@@ -468,38 +458,29 @@ public class FileManagementProtocol {
     void handleFileListRequest(String topic, MqttMessage message) {
         logReceivedMqttMessage(topic, message);
         LOG.info("Received request for the file list. Responding...");
-        publishFileList(FILE_LIST_RESPONSE + client.getClientId());
+        publishFileList();
     }
 
     /**
      * This is the method that is used to capture the file list and send it.
-     * This one takes in a topic to which the message will be sent.
-     *
-     * @param topic The topic to which the message will be sent.
      */
-    private void publishFileList(String topic) {
+    public void publishFileList() {
         // Stored values;
-        List<String> files;
         List<FileInformation> payload;
 
         // Acquire all the files
         try {
-            files = management.listAllFiles();
-            LOG.trace("Peeked the file system to find files, found " + files.size() + " files.");
+            payload = management.listAllFiles();
+            LOG.trace("Peeked the file system to find files, found " + payload.size() + " files.");
         } catch (IOException exception) {
             LOG.error("Error occurred during reading of folder contents.", exception);
             return;
         }
 
-        // Place them all in the payload
-        payload = new ArrayList<>();
-        for (String file : files) {
-            payload.add(new FileInformation(file));
-        }
         LOG.trace("Created payload to announce '" + payload + "'.");
 
         // Send everything
-        publish(topic, payload);
+        publish(OUT_DIRECTION + client.getClientId() + FILE_LIST, payload);
     }
 
     /**
